# web-contest

./: CMakeLists.txt  README.md
.github/workflows/: publish-docker.yml
app/scripts/: assignment_web-contest-sandbox-icub.xml  assignment_web-contest-sandbox-icubSim.xml  assignment_web-contest-sandbox-system.xml
dockerfiles/: Dockerfile
gazebo/models/fallback-1/: mesh.stl  model.config  model.sdf
gazebo/models/fallback-2/: mesh.stl  model.config  model.sdf
gazebo/models/fallback-3/: mesh.stl  model.config  model.sdf
gazebo/models/fallback-4/: mesh.stl  model.config  model.sdf
gazebo/models/icub_head_epr/: model.config  model.urdf
gazebo/models/object/: mesh.stl  model.config  model.sdf
gazebo/worlds/: web-contest-sandbox.sdf
smoke-test/: CMakeLists.txt  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: main.cpp  viewer.h  world.cpp
